Alive Parish v2.0-beta1, 2014-04-15
-----------------------------------
 * Family Data autocomplete: Area, PIN, Marriage Church
 * Currency customization and configuration in Site config
 * Updated ECalendarView extension to latest version 0.5
 * Command line script to import Baptism Records
 * Excel Export for Confirmation, Death and Banns Registers
 * Excel export for Baptism, Marriage and First Communion Registers
 * Transaction create/update: auto-populate type credit/debit
 * Collection: index, view actions added
 * Show own transactions for staff in transaction index
 * Site config controller name issue fixed (affects index.php setups)
 * Account type, placeholder, reserved added; controller rights
 * Added Finances menu; User transactions; renamed users -> user
 * Collection create added; Transaction CRUD added
 * Account Statement Report: monthly, yearly, financial period added
 * Added Finance Reports: Account Summary, Account Statement
 * Added accounts table, model, CRUD

Alive Parish v1.0, 2014-02-20
-----------------------------
 * 15 families in Subscriptions chart sorted by max due
 * Fixed global search on non-root; all date search format conversion
 * Datepicker in search for all date fields, deathRecords buried_dt shown
 * Fixtures for subscriptions, marriage_certs; 2 functional tests fixed
 * Decoding bride/groom marriage status in marriage certificate: fixes #232
 * Family right sidebar menu: fixed absolute action urls
 * Mass booking: prevent past date/time booking
 * Member certificate date correctly formatted. Fixes #234
 * Added Admin > Survey: manage+items for different survey types
 * Installer account creation: double encryption issue fixed
 * Family create: family data date fields incorrect load fixed
 * Membership certificate for husband/father and wife/mother fixed
 * Mass booking: formatted mass time correctly. Fixes #236
 * Removed rights for Pastor (requires Admin role). Fixes #237